--- a/framestyle.css
+++ b/framestyle.css
@@ -1,7 +1,16 @@
+body {
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+color:#777;
+background: #777;
+width: 960px;
+font-size: 18px;
+
+}
+
 
 
 #header {
-    background-color: lightgrey;
+    background: #ebebeb;
     height: 100px;
     padding: 20px;
     margin-bottom: 20px;
@@ -10,7 +19,7 @@
 }
 
 #nav {
-    background-color: lightgrey;
+    background: #ebebeb;
     height: 100px;
     padding: 20px;
     margin-bottom: 20px;
@@ -18,7 +27,7 @@
 }
 
 #section {
-    background-color: lightgrey;
+    background: #ebebeb;
     height: 100px;
     padding: 20px;
     margin-bottom: 20px;
@@ -27,30 +36,38 @@
 }
 
 #article {
-    background-color: lightgrey;
+    color:#ebebeb;
+    background: #777;
     height: 300px;
     padding: 20px;
     margin-bottom: 20px;
-    width:45%;
     text-align: center;
+    width: 45%;
+    float: left;
 }
 
 #aside {
     
-    background-color: lightgrey;
+   background:#ebebeb;
     height: 300px;
     padding: 20px;
     margin-bottom: 20px;
     float: right;
-    width:45%;
     text-align: center;
+    width: 45%;
 }
 
 #footer{
     clear: both;
-    background-color: lightgrey;
+    background: #ebebeb;
     height: 100px;
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.wrapper {
+    width: 900px;
+    margin:0 auto 0 auto;
+    padding:20px;
 }
