--- a/framestyle.css
+++ b/framestyle.css
@@ -4,10 +4,10 @@ color:#777;
 background: #777;
 width: 960px;
 font-size: 18px;
+margin:auto;
+
 
 }
-
-
 
 #header {
     background: #ebebeb;
@@ -28,22 +28,25 @@ font-size: 18px;
 
 #section {
     background: #ebebeb;
-    height: 100px;
+    color:#777;
+    height: 300px;
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
+    width:45%;
+    float: left;
     
 }
 
 #article {
     color:#ebebeb;
     background: #777;
-    height: 300px;
+    height: 200px;
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
-    width: 45%;
-    float: left;
+    
+    
 }
 
 #aside {
@@ -67,7 +70,5 @@ font-size: 18px;
 }
 
 .wrapper {
-    width: 900px;
-    margin:0 auto 0 auto;
     padding:20px;
 }
